2005-09-11  Fernando Herrera  <fherrera@onirica.com>

	* modulesets/gnome-2.12.modules (xchat): Update to 2.4.5

2005-09-11  Damon Chaplin  <damon@gnome.org>

	* modulesets/gnome-2.10.modules: Use gnome-2-10 branch for Glade.

2005-09-08  Harish Krishnaswamy  <kharish@novell.com>

	* modulesets/gnome-2.12.modules: Use gnome-2-12 branch for 
	evolution, evolution-data-server and evolution-exchange.

2005-09-08  Kaushal Kumar  <kakumar@novell.com>

	* modulesets/gnome-2.12.modules: Use gnome-2-12 branch for 
	gtkhtml.

2005-09-07  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.12.modules (gnome-desktop): use gnome-2-12 branch

2005-09-06  Mark McLoughlin  <mark@skynet.ie>

	* modulesets/gnome-2.12.modules: GNOME 2.12 is shipping
	the gnome-2-10 branch of ORBit2.

2005-09-06  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-2.12.modules: gnome-2-12 branch
	for libgnome, libgnomeui, libgnomecanvas and gnome-terminal

2005-09-02  Johan Dahlin  <jdahlin@async.com.br>

	* modulesets/gnome-2.12.modules: pygtk supports
	non-srcdir builds now.

2005-08-31  Lucas Rocha  <lucasr@cvs.gnome.org>

	* modulesets/gnome-2.12.modules: Zenity has 
	branched for GNOME 2.12.

Tue Aug 30 13:56:32 2005  Jonathan Blandford  <jrb@redhat.com>

	* modulesets/gnome-2.12.modules: Evince has branched for GNOME
	2.12.

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* modulesets/gnome-2.12.modules:
	Epiphany has branched for GNOME 2.12.

2005-08-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* modulesets/freedesktop.modules: pycairo should not suggest
	gnome-python/pygtk, it's actually the other way around, otherwise
	you get an infinite loop in "jhbuild build pycairo gnome-python/pygtk".

2005-08-27  Richard A. Stellingwerff  <remenic@gmail.com>

	* modulesets/gnome-2.12.modules: Removed separate Clearlooks, which is now
	part of gtk-engines.

2005-08-26  Matthias Clasen  <mclasen@redhat.com>

	* modulessets/gtk.modules: New moduleset to track GTK+ HEAD.
