@@ -65,6 +65,7 @@
 <!ATTLIST tarball
   id CDATA #REQUIRED
   version CDATA #REQUIRED
+  checkoutdir CDATA #IMPLIED
   autogenargs CDATA #IMPLIED
   makeargs CDATA #IMPLIED
   supports-non-srcdir-builds (yes|no) 'yes' >
