@@ -81,6 +81,7 @@ metamodule = element metamodule { common }
 
 tarball = element tarball {
   attribute version { text },
+  attribute checkoutdir { text }?,
   attribute autogenargs { text }?,
   attribute makeargs { text }?,
   attribute supports-non-srcdir-builds { "yes" | "no" }?,
