@@ -1,3 +1,12 @@
+2005-09-13  James Henstridge  <james@jamesh.id.au>
+
+	* modulesets/moduleset.dtd (tarball): add checkoutdir attribute.
+
+	* modulesets/moduleset.rnc (tarball): add checkoutdir attribute.
+
+	* jhbuild/modtypes/tarball.py (parse_tarball): support a
+	checkoutdir attribute.  Fixes bug #313249.
+
 2005-09-11  Fernando Herrera  <fherrera@onirica.com>
 
 	* modulesets/gnome-2.12.modules (xchat): Update to 2.4.5
